/* Siirada Rasuulka Mohamed SWC = */

--- a/Islaam.mw
+++ b/Islaam.mw
@@ -106,7 +106,7 @@ Labadaa tiir ee Islaamka iyo Iimaanka rumayntooda iyo ku dhaqankoodu  waxay addo
 
 
 
-= Siirada Rasuulka Mohamed SWC ==
+= Siirada Rasuulka Mohamed SCW = 
 
 NASABKII RASUULKA SCW 
 Sida la wada ogsoon yahay nasabka Rasuulka SCW ama abtirisiinyihiisu wuxuu galaa nabiyullaahi Ismaaciil oo uu dhalay nabi Ibraahim. Abtirsiinyada nabiga SCW waxay u qaybsantaa saddex qaybood: Qaybta u hooreysa marka nabiga SCW laga soo bilaabo waxay ku eg tahay ilaa Cadnaa, waana qayb culimada islaamka oo dhan ay isku waafaqsan tahay isla markaasna la hubo sixadeeda; Qaybta labaad oo iyaduna ka bilaabato Cadnaan waxay ku eg tahay ilaa nabi Ismaaciil, hase yeeshee waa qayb ay culimadu isku khilaafsan tahay sixadeeda in badan oo culimada ka mid ihina way ka gaabsadaan, qaar kalena way ka hadlaan; Qaybta saddexaad oo ka bilaabata nabi Ismaaciil ilaa laga gaaro nabi Aadan aad ayaay u adag tahay xaqiijinteeda iyo sixadeeda waxana wanaagsan in laga dhowrsada oo aan la dhex dabaalan. 
@@ -121,7 +121,7 @@ Haashim Wuxuu dhalay afar wiil oo kala ahaa: Asad, Abu Seyfi, Nadla' iyo Cabdimu
 
 Cabdimudhalib siduu ku dhashay waxay ahayd aabbihiis Haashim ayaa Safar ugu kacay Shaam, wuxuuna sii maray Madiina oo uu ku guursaday kulana aqalgalay Salma bintu Camar. Haashim wuxuu sii watay safarkiisii Shaam. Markuu Shaam tegey ayuu xanuunsaday, muddo dabadeedna wuxuu ku geeriyooday magaalo la yiraahdo Qusa oo Falastiin ku taala. Salma, oo uur lahayd markuu Haashim tegey, waxay dhashay wiil ay u bixisay Sheyba. Haashim markuu dhintay waxa mas'uuliyaddii waraabinta xujeyda qaaday walaalkiis Mudhalib. Mudhalib markuu hawshaas muddo hayey ayuu Madiina aaday si uu u soo wado wiilkii uu walaalkiis Haashim ka tegey (Sheyba). Markuu Madiina yimid ayuu Salma ka codsaday inay wiilka ku darto hase yeeshee way u diidday, markaasuu ku yiri "waxaan u dhiibayaa hawshii aabbihiis iyo xaramkii Alle", sidaa ayeyna ugu dartay. Mudhalib markuu Makka ku soo noqday isagoo wiilkuu adeerka u ahaa wada, ayaa waxaa arkay dadkii Makka joogey markaasey wiilkii u maleeyeen addoon uu Mudhalib soo iibsaday sidaas darteed ayey wiilkii ku dheheen Cabdimudhalib (addoonkii Mudhalib), markaasuu mudhalib ku yiri "war hooggiinee, waa wiilkii walaalkay Haashim". Sidaas ayaa wiilkii Sheyba ahaa kula baxay naaneystaas Cabdimudhalib. 
 
-Cabdimudhalib wuxuu dhalay toban wiil iyo lix gabdhood, waxaana tobanka wiil lakalal oran jiray: Xaarith, Subayr, Abuu Dhaalib, Cadullahi, Safar, Cabbaas, Xamsa, abuu Lahab, Qiyidaaq, Muqawim. Lixda Gabdhoodna waxay kala ahaayeen: Safiya, Arwa, Ummu Xakiim, Bara'Caatika iyo Ummayma. Cabdimudhalib wuxuu noqday nin cajiib ah oo qureysh oo dhan ka tilmaaman, wuxuu noqday odeygii qureysheed sida lo ogsoon yahayna wuxuu leeyahay qisooyin caan ah oo kala duwan, halkanna aynaan ku soo wada koobi karin, waxaana ka mida ahaa Duullaankii Abraha iyo Qodiddii Samsamka, kuwaas oo isaga iyo qureyshba Ilaahay ugu gargaaray. 
+Cabdimudhalib wuxuu dhalay toban wiil iyo lix gabdhood, waxaana tobanka wiil lakala odhan jiray: Xaarith, Subayr, Abuu Dhaalib, Cadullahi, Safar, Cabbaas, Xamsa, abuu Lahab, Qiyidaaq, Muqawim. Lixda Gabdhoodna waxay kala ahaayeen: Safiya, Arwa, Ummu Xakiim, Bara'Caatika iyo Ummayma. Cabdimudhalib wuxuu noqday nin cajiib ah oo qureysh oo dhan ka tilmaaman, wuxuu noqday odeygii qureysheed sida lo ogsoon yahayna wuxuu leeyahay qisooyin caan ah oo kala duwan, halkanna aynaan ku soo wada koobi karin, waxaana ka mida ahaa Duullaankii Abraha iyo Qodiddii Samsamka, kuwaas oo isaga iyo qureyshba Ilaahay ugu gargaaray. 
 
 
 == Casharka 2aad ee Kitaabka Siirada Nebiga Muhammed SCW ==
