/* Degmooyinka gobolka Galguduud */

--- a/Galguduud.mw
+++ b/Galguduud.mw
@@ -28,7 +28,8 @@ Gobolkan wuxuu qaab beeleedkiisu la mid yahay Gobolka Banaadir waayo waxaa ka so
 * [[Ceeldheer]]
 * [[Cadaado]] 
 * [[Balanballe]]
-* [[Guriceel]]
+* [[Galcad]]
+* [[Galhareeri]]
 {{Gobolada Soomaaliya}}
 [[Category:Gobolada_Soomaaliya]]
 
