Reverted edits by [[Special:Contributions/86.129.173.53|86.129.173.53]] ([[User talk:86.129.173.53|Talk]]); changed back to last version by [[User:SieBot|SieBot]]

--- a/Galguduud.mw
+++ b/Galguduud.mw
@@ -28,8 +28,7 @@ Gobolkan wuxuu qaab beeleedkiisu la mid yahay Gobolka Banaadir waayo waxaa ka so
 * [[Ceeldheer]]
 * [[Cadaado]] 
 * [[Balanballe]]
-* [[Galcad]]
-* [[Galhareeri]]
+* [[Guriceel]]
 {{Gobolada Soomaaliya}}
 [[Category:Gobolada_Soomaaliya]]
 
