--- a/Xaliimo_Khaliif_Cumar_Magool.mw
+++ b/Xaliimo_Khaliif_Cumar_Magool.mw
@@ -12,3 +12,4 @@ Xaliimo Khaliif Cumar oo ku magac-dheereed Magool waxay ku dhalatey gobolka [[Hi
 [[en:Magool]]
 wax eey taqaanay malah meelaha ayeey jaadka ku cuni jartay inta la dhageesanayo heesa heedana waxaa usocda danbi
 FAdlan dadka dhintay yaan wax la sheeg
+                                                                                                                                                                                                                                                                                                                                                               Alla ha u naxariistee Xaliimo Khaliif Magool waxey aheyd hooyada fanka, By Baana
