روبوت  إضافة: [[vec:Merica de soto]]

--- a/Ameerikada_koonfureed.mw
+++ b/Ameerikada_koonfureed.mw
@@ -117,6 +117,7 @@
 [[tpi:Saut Amerika]]
 [[tr:Güney Amerika]]
 [[uk:Південна Америка]]
+[[vec:Merica de soto]]
 [[vi:Nam Mỹ]]
 [[wo:Bëj-saalumu Aamerig]]
 [[yi:דרום אמעריקע]]
