--- a/Woqooyiga_Ameerika.mw
+++ b/Woqooyiga_Ameerika.mw
@@ -66,6 +66,7 @@
 [[jv:Amérika Lèr]]
 [[ka:ჩრდილოეთი ამერიკა]]
 [[kk:Солтүстік Америка]]
+[[kl:Amerika Avannarleq]]
 [[ko:북아메리카]]
 [[ksh:Nochd Ammärrika]]
 [[ku:Emerîkaya Bakur]]
