--- a/Holland.mw
+++ b/Holland.mw
@@ -70,6 +70,7 @@ Magaalo madaxda Nederland waa [[Amsterdam]], dowladduna waxey fadhidaa [[Heeg]] 
 [[jv:Walanda]]
 [[ka:ნიდერლანდი]]
 [[kk:Недерланд]]
+[[kl:Hollandi]]
 [[ko:네덜란드]]
 [[ks:नेदरलैंड्स]]
 [[ksh:Nederläng]]
