--- a/Finland.mw
+++ b/Finland.mw
@@ -171,6 +171,7 @@ Image:Kontulan ostari.jpg|Kontula, Helsinki
 [[jbo:suom]]
 [[ka:ფინეთი]]
 [[kk:Финландия]]
+[[kl:Finlandi]]
 [[kn:ಫಿನ್‍ಲ್ಯಾಂಡ್]]
 [[ko:핀란드]]
 [[ks:फिन्लैंड]]
