روبوت  إضافة: [[lg:EKIWANDIIKO EKY'ABANTU BONNA EKIFA KU DDEMBE LY'OBUNTO]]

--- a/Baaqa_Caalamiga_ee_Xuquuqda_Aadanaha.mw
+++ b/Baaqa_Caalamiga_ee_Xuquuqda_Aadanaha.mw
@@ -189,6 +189,7 @@ Baaqan kuma jiraan wax loo fasiri karo in micnahoodu yahay in Dawlad, koox ama q
 [[kab:Tiṣerriḥt tagraɣlant izerfan n wemdan]]
 [[kk:Адам құқықтарының жалпыға бірдей декларациясы]]
 [[ko:세계인권선언]]
+[[lg:EKIWANDIIKO EKY'ABANTU BONNA EKIFA KU DDEMBE LY'OBUNTO]]
 [[ln:Lisakoli ya molongo ya makoki ya moto]]
 [[lt:Visuotinė žmogaus teisių deklaracija]]
 [[lv:Vispārējā cilvēktiesību deklarācija]]
