روبوت  إضافة: [[ky:Германия]]

--- a/Jarmal.mw
+++ b/Jarmal.mw
@@ -93,6 +93,7 @@ Wadan [[Yurub]] ku yaala oo [[faransis]]ka iyo [[denmark]]i xad la wadaaga. Waan
 [[ku:Almanya]]
 [[kv:Германия]]
 [[kw:Almayn]]
+[[ky:Германия]]
 [[la:Germania]]
 [[lad:Almania]]
 [[lb:Däitschland]]
