*Empty MediaWiki Message*

--- a/Ayaan_Hirsi_Ali.mw
+++ b/Ayaan_Hirsi_Ali.mw
@@ -1,8 +1,24 @@
-[[Image:Ayaan-Hirsi-Ali-VVD.NL-1200x1600.JPG|right|thumb|200px||<center>Ayaan Hirsi Ali</center>]]
+{{Infobox Person
+| name        = Ayaan Xirsi Cali
+| image       = Ayaan-Hirsi-Ali-VVD.NL-1200x1600.JPG
+| image_size  = 200px
+| jaantus     = Sawirka Ayaan Xirsi Cali
+| taariikhda_dhalashada  = {{Taariikhda dhalashada iyo da'da|1969|11|13|mf=y}}
+| meesha_dhalashada = [[Muqdisho]], [[Soomaaliya]]
+| lagu_yaqaan   = ''[[Submission (film)|Submission]]''<br/>''[[The Caged Virgin]]''<br/>''[[Infidel (book)|Infidel]]''
+| shaqada  = [[Siyaasiyad]], [[Qoraa]]
+| xisbiga       = [[Xisbiga dadka ee Dimoqraadiyadda iyo Madaxbannaanida]]
+| dhiirageliyeyaal  = [[John Stuart Mill]], [[Friedrich Hayek]], [[Simone de Beauvoir]], [[Karl Popper]], [[Herman Philipse]]
+| diinta    = [[Atheism|Atheist]]
+}}
 
-'''Ayaan Xirsi Cali''' (Ayaan Xirsi Magan) (° [[Muqdisho]] 13 [[Nofeembar]] [[1969]]).
+'''Ayaan Xirsi Cali''' ({{audio|Nl-Ayaan Hirsi Ali.ogg|pronunciation}}; {{lang-so|''Ayaan Xirsi Cali''}};  ku dhalatay magaca '''Ayaan Xirsi Magan''' [[13 November]] [[1969]], [[Muqadisho]], [[Soomaaliya]])<ref> 
+{{cite web|url=http://pen.org/page.php/prmID/1167|title=Ayaan Hirsi Ali|accessdate=2007-01-07 
+|publisher=PEN American Center|quote=Ayaan Hirsi Ali was born in Somalia on [[November 13]], [[1969]].}}
+</ref> Waa gabadh [[Netherlands|Dutch]] ah oo u ol-olaysa xuquuqda [[dumar|dumarka]] mudana ahayd qoraa iyo siyaasiyad. Ayaan waxaa dhalay siyaasiga aqoonyahanka ah ee [[Soomaali]]yeed [[Xirsi Magan Ciise]]. Ayaan ayaa markay [[Qaarad|qaaradda]] [[Eurpoe|Yurub]] tagtay soo caanbaxday ka dib markii ay caadaysatay Af-lagaadhaynta [[Islam|Diinta Islaamka]]. Qormooyinkeedii lidka ku ahaa Islaamka ayaa waxaa ugu caansanaa filimka ''[[Submission (film)|Submission]]'' ([[Is-Dullayn|Is-Dullayn]]), iyo buugeedii ''[[Infidel_(book)|Infidel]]'', kuwaasina waxay sabab u ahaayeen in ururro iyo shakhsiyaad Islaami ahi ugu gooddiyaan (hanjabaan) in qudha laga jarayo (la dilayo), sidaa darteedna Ayaan nolosheedu waxay isugu biya shubatay inaan ku hoos noolaato ilaalada iyo inay ku jirto  dhuumaalaysi iyo baxsi ay nafteeda ku badbaadinayso . Waxay ku kasbatay abaal marinno dhowr ah shaqooyinkii ay u haysay [[Xuquuqda Aadanaha]]. Sidoo kale sanadkii [[2005]] ayay ahayd markii Ayaan lagu xusay Shintiriska (Majaladda) ''[[Majladda_Time|Time]]'' iyadoo joornaalkaasi ku daray Ina Xirsi Magan [[100]]-ka qof ee adduunka ugu dhiirranaa waqtigaas.
 
-[[Category:Soomaaliya|Hirsi Ali, Ayaan]]waa dhilo waynaatay oo ku caanbaxday inay diinta islaamka caydo , nimanka cadaanka ah na guska u jaqda, ayaan hirsi ali , waxay gusjaqida ku bilowday iyadoo sagaal sano jirtaa. abaheed iyo hoyadeed siilka ayeey ka gubeen si ay u joojiso was mada, lakiin markii ay wadanka holand timid ayeey jaanis u heshay inay wasto waxii ay awood, iyadoo wastay nin holandis ah oo flimka submision la sameeyey, ayaan hada waxaa laga wasaa USA oo bush iyo niman wasmada somalida jecel baa wasa, ilahey waxaan uga baryeeynaa inay ayaan xirsi uu aduunka ku cadaabo balaayo ala ha u kenee , siilka nabar kaa soo bax, inkaari kugu dhacday.
+
+[[Category:Soomaaliya|Hirsi Ali, Ayaan]]
 
 [[ar:آيان حرصي علي]]
 [[bg:Аян Хирси Али]]
