*Empty MediaWiki Message*

--- a/Ayaan_Hirsi_Ali.mw
+++ b/Ayaan_Hirsi_Ali.mw
@@ -2,14 +2,14 @@
 | name        = Ayaan Xirsi Cali
 | image       = Ayaan-Hirsi-Ali-VVD.NL-1200x1600.JPG
 | image_size  = 200px
-| jaantus     = Sawirka Ayaan Xirsi Cali
-| taariikhda_dhalashada  = {{Taariikhda dhalashada iyo da'da|1969|11|13|mf=y}}
-| meesha_dhalashada = [[Muqdisho]], [[Soomaaliya]]
-| lagu_yaqaan   = ''[[Submission (film)|Submission]]''<br/>''[[The Caged Virgin]]''<br/>''[[Infidel (book)|Infidel]]''
-| shaqada  = [[Siyaasiyad]], [[Qoraa]]
-| xisbiga       = [[Xisbiga dadka ee Dimoqraadiyadda iyo Madaxbannaanida]]
-| dhiirageliyeyaal  = [[John Stuart Mill]], [[Friedrich Hayek]], [[Simone de Beauvoir]], [[Karl Popper]], [[Herman Philipse]]
-| diinta    = [[Atheism|Atheist]]
+| caption     = Sawirka Ayaan Xirsi Cali
+| birth_date  = {{Taariikhda dhalashada iyo da'da|1969|11|13|mf=y}}
+| birth_place = [[Muqdisho]], [[Soomaaliya]]
+| known_for   = ''[[Submission (film)|Submission]]''<br/>''[[The Caged Virgin]]''<br/>''[[Infidel (book)|Infidel]]''
+| occupation  = [[Siyaasiyad]], [[Qoraa]]
+| party       = [[Xisbiga dadka ee Dimoqraadiyadda iyo Madaxbannaanida]]
+| influences  = [[John Stuart Mill]], [[Friedrich Hayek]], [[Simone de Beauvoir]], [[Karl Popper]], [[Herman Philipse]]
+| religion    = [[Atheism|Atheist]]
 }}
 
 '''Ayaan Xirsi Cali''' ({{audio|Nl-Ayaan Hirsi Ali.ogg|pronunciation}}; {{lang-so|''Ayaan Xirsi Cali''}};  ku dhalatay magaca '''Ayaan Xirsi Magan''' [[13 November]] [[1969]], [[Muqadisho]], [[Soomaaliya]])<ref> 
