*Empty MediaWiki Message*

--- a/Ayaan_Hirsi_Ali.mw
+++ b/Ayaan_Hirsi_Ali.mw
@@ -1,21 +1,5 @@
-{{
-| name        = Ayaan Xirsi Cali
-| image       = Ayaan-Hirsi-Ali-VVD.NL-1200x1600.JPG
-| image_size  = 200px
-| caption     = Sawirka Ayaan Xirsi Cali
-| birth_date  = {{Taariikhda dhalashada iyo da'da|1969|11|13|mf=y}}
-| birth_place = [[Muqdisho]], [[Soomaaliya]]
-| known_for   = ''[[Submission (film)|Submission]]''<br/>''[[The Caged Virgin]]''<br/>''[[Infidel (book)|Infidel]]''
-| occupation  = [[Siyaasiyad]], [[Qoraa]]
-| party       = [[Xisbiga dadka ee Dimoqraadiyadda iyo Madaxbannaanida]]
-| influences  = [[John Stuart Mill]], [[Friedrich Hayek]], [[Simone de Beauvoir]], [[Karl Popper]], [[Herman Philipse]]
-| religion    = [[Atheism|Atheist]]
-}}
-
-'''Ayaan Xirsi Cali''' ({{audio|Nl-Ayaan Hirsi Ali.ogg|pronunciation}}; {{lang-so|''Ayaan Xirsi Cali''}};  ku dhalatay magaca '''Ayaan Xirsi Magan''' [[13 November]] [[1969]], [[Muqadisho]], [[Soomaaliya]])<ref> 
-{{cite web|url=http://pen.org/page.php/prmID/1167|title=Ayaan Hirsi Ali|accessdate=2007-01-07 
-|publisher=PEN American Center|quote=Ayaan Hirsi Ali was born in Somalia on [[November 13]], [[1969]].}}
-</ref> Waa gabadh [[Netherlands|Dutch]] ah oo u ol-olaysa xuquuqda [[dumar|dumarka]] mudana ahayd qoraa iyo siyaasiyad. Ayaan waxaa dhalay siyaasiga aqoonyahanka ah ee [[Soomaali]]yeed [[Xirsi Magan Ciise]]. Ayaan ayaa markay [[Qaarad|qaaradda]] [[Eurpoe|Yurub]] tagtay soo caanbaxday ka dib markii ay caadaysatay Af-lagaadhaynta [[Islam|Diinta Islaamka]]. Qormooyinkeedii lidka ku ahaa Islaamka ayaa waxaa ugu caansanaa filimka ''[[Submission (film)|Submission]]'' ([[Is-Dullayn|Is-Dullayn]]), iyo buugeedii ''[[Infidel_(book)|Infidel]]'', kuwaasina waxay sabab u ahaayeen in ururro iyo shakhsiyaad Islaami ahi ugu gooddiyaan (hanjabaan) in qudha laga jarayo (la dilayo), sidaa darteedna Ayaan nolosheedu waxay isugu biya shubatay inaan ku hoos noolaato ilaalada iyo inay ku jirto  dhuumaalaysi iyo baxsi ay nafteeda ku badbaadinayso . Waxay ku kasbatay abaal marinno dhowr ah shaqooyinkii ay u haysay [[Xuquuqda Aadanaha]]. Sidoo kale sanadkii [[2005]] ayay ahayd markii Ayaan lagu xusay Shintiriska (Majaladda) ''[[Majladda_Time|Time]]'' iyadoo joornaalkaasi ku daray Ina Xirsi Magan [[100]]-ka qof ee adduunka ugu dhiirranaa waqtigaas.
+[[Image:Ayaan-Hirsi-Ali-VVD.NL-1200x1600.JPG|thumb|200px|Ayaan Xirsi Cali]]
+'''Ayaan Xirsi Cali''' oo ku dhalatay magaca '''Ayaan Xirsi Magan''' [[13 Nofeembar]] [[1969]], [[Muqdisho]], [[Soomaaliya]]). Waa gabadh [[Netherlands|Dutch]] ah oo u ol-olaysa xuquuqda [[dumar|dumarka]] mudana ahayd qoraa iyo siyaasiyad. Ayaan waxaa dhalay siyaasiga aqoonyahanka ah ee [[Soomaali]]yeed [[Xirsi Magan Ciise]]. Ayaan ayaa markay [[Qaarad|qaaradda]] [[Eurpoe|Yurub]] tagtay soo caanbaxday ka dib markii ay caadaysatay Af-lagaadhaynta [[Islam|Diinta Islaamka]]. Qormooyinkeedii lidka ku ahaa Islaamka ayaa waxaa ugu caansanaa filimka ''[[Submission (film)|Submission]]'' ([[Is-Dullayn|Is-Dullayn]]), iyo buugeedii ''[[Infidel_(book)|Infidel]]'', kuwaasina waxay sabab u ahaayeen in ururro iyo shakhsiyaad Islaami ahi ugu gooddiyaan (hanjabaan) in qudha laga jarayo (la dilayo), sidaa darteedna Ayaan nolosheedu waxay isugu biya shubatay inaan ku hoos noolaato ilaalada iyo inay ku jirto  dhuumaalaysi iyo baxsi ay nafteeda ku badbaadinayso . Waxay ku kasbatay abaal marinno dhowr ah shaqooyinkii ay u haysay [[Xuquuqda Aadanaha]]. Sidoo kale sanadkii [[2005]] ayay ahayd markii Ayaan lagu xusay Shintiriska (Majaladda) ''[[Majladda_Time|Time]]'' iyadoo joornaalkaasi ku daray Ina Xirsi Magan [[100]]-ka qof ee adduunka ugu dhiirranaa waqtigaas.
 
 
 [[Category:Soomaaliya|Hirsi Ali, Ayaan]]
