*Empty MediaWiki Message*

--- a/Allaah.mw
+++ b/Allaah.mw
@@ -1,1 +1,1 @@
-'''Allaah''' Waa magac ka mid ah magacyada Ilaah, ee Diinta Islaamka
+'''Allaah''' ([[Luuqada Carabiga]]: {{lang|ar|الله}}, Waa magac ka mid ah magacyada Ilaah, ee Diinta Islaamka.
