--- a/Allaah.mw
+++ b/Allaah.mw
@@ -1,1 +1,63 @@
 '''Allaah''' ([[Luuqada Carabiga]]: {{lang|ar|الله}}, Waa magac ka mid ah magacyada Ilaah, ee Diinta Islaamka.
+
+[[af:Allah]]
+[[ar:الله (إسلام)]]
+[[az:Allah]]
+[[bg:Аллах]]
+[[bn:আল্লাহ]]
+[[br:Allah]]
+[[bs:Allah]]
+[[ca:Al·là]]
+[[cs:Alláh]]
+[[cy:Al-lâh]]
+[[da:Allah]]
+[[de:Allah]]
+[[dv:ﷲ]]
+[[en:Allah]]
+[[eo:Alaho]]
+[[es:Alá]]
+[[et:Allah]]
+[[fa:الله]]
+[[fi:Allah]]
+[[fr:Allah]]
+[[gl:Alá]]
+[[he:אללה]]
+[[hi:अल्लाह]]
+[[hr:Alah]]
+[[hu:Allah]]
+[[id:Allah]]
+[[is:Allah]]
+[[it:Allah]]
+[[ja:アッラーフ]]
+[[ka:ალაჰი]]
+[[kn:ಅಲ್ಲಾಹ]]
+[[ko:알라]]
+[[ku:Allah]]
+[[lt:Alachas]]
+[[lv:Dievs islāmā]]
+[[ml:അല്ലാഹു]]
+[[ms:Allah]]
+[[mt:Alla]]
+[[nl:Allah]]
+[[nn:Allah]]
+[[no:Allah]]
+[[pl:Allah]]
+[[pt:Alá]]
+[[ro:Allah]]
+[[ru:Аллах]]
+[[sd:الله]]
+[[simple:Allah]]
+[[sk:Alah]]
+[[sl:Alah]]
+[[sq:Allahu]]
+[[sr:Алах]]
+[[sv:Allah]]
+[[ta:அல்லாஹ்]]
+[[tg:Оллоҳ]]
+[[th:อัลลอฮ์]]
+[[tr:Allah]]
+[[tt:Allah]]
+[[uk:Аллах]]
+[[ur:اللہ]]
+[[uz:Alloh]]
+[[zh:安拉]]
