*Empty MediaWiki Message*

--- a/Allaah.mw
+++ b/Allaah.mw
@@ -1,4 +1,6 @@
-'''Allaah''' ([[Luuqada Carabiga]]: {{lang|ar|الله}}, Waa magac ka mid ah magacyada Ilaah, ee Diinta Islaamka.
+'''Allaah''' ([[Luuqada Carabiga]]: {{lang|ar|الله}}, Waa magac ka mid ah magacyada Ilaah, ee [[Diinta]] [[Islaamka]].
+
+[[Category:Islaam]]
 
 [[af:Allah]]
 [[ar:الله (إسلام)]]
