[[en:Submission (film)]]

--- a/Submission_(film).mw
+++ b/Submission_(film).mw
@@ -1,3 +1,12 @@
 '''''Submission''''' [[Is-Dullayn]], waa filim [[Ingriis]] ah oo soconaya 10 daqiiqo. Waxaa tifaaftirey [[Theo van Gogh (agaasime filim)|Theo van Gogh]] waxaana qortay [[Ayaan Hirsi Ali|Ayaan Xirsi Cali]].
 
 Filimkaan ayaa wuxuu muujinayaa [[dumar]] qaaqaawan oo dushooda lagu qoray [[Quraan|Quraanka]] Sharafta leh.
+
+[[ar:الخضوع (فيلم)]]
+[[de:Submission (Film)]]
+[[en:Submission (film)]]
+[[es:Submission (película)]]
+[[it:Submission (film)]]
+[[nl:Submission]]
+[[fi:Submission]]
+[[sv:Underkastelse (film)]]
