*Empty MediaWiki Message*

--- a/KMG_Soomaaliya.mw
+++ b/KMG_Soomaaliya.mw
@@ -1,4 +1,3 @@
-
 {{Infobox Country or territory
 |native_name              = {{lang|so|''Soomaaliya''}}<br/>{{rtl-lang|ar|الصومال}}<br/>Somalia
 |common_name              = Somalia
@@ -54,11 +53,11 @@
 |footnote2                = [http://news.bbc.co.uk/2/hi/africa/country_profiles/1072592.stm BBC News country profile]
 }}
 
-'''Soomaaliya''' waa dal ku yaalla geeska Bari ee [[Afrika]]. Waa dal ku fadhiya dhul balaaran inkastoo aysan ilaa iyo hada dhulalka mid ah aysan xorayadoodii wali qaadan sida Dhulka soomaali galbeed ee itoobiya gumaysato dhulka NFD ee Kenya gumaysato, waa dal raadkiisu taariikhda dunida laga heli karo, isagoo hadba magac lagu tilmaamayo, gaar ahaan xilligii Faraaciinta iyo Romaankuba. Soomaaliya waxay u qaybsantahay 18 gobol,oo kala ah:
+'''Soomaaliya''' waa dal dhaca geeska Bari ee [[Qaarad|Qaaradda]] [[Afrika]]. Waa dal ku fadhiya dhul balaaran isla markaasna raadkiisa taariikhda dunida laga heli karo, isagoo hadba magac lagu tilmaamayo, gaar ahaan xilligii [[Fraaciin|Faraaciinta]] iyo [[Rooman|Romaankuba]]. Soomaaliya waxay u qaybsantahay 18 gobol,oo kala ah:
 *01. [[Awdal]] (Baki) 
 *02. [[Bakool]] (Xudur) 
 *03. [[Banaadir]] ([[Muqdisho]] ama [[Xamar]]) 
-*04. [[Bari]] (Bender Cassim) ( Boosaaso).
+*04. [[Bari]] (Bender Cassim) ( [[Boosaaso]]).
 *05. [[Bay]] ([[Baydhabo]]) 
 *06. [[Galguduud]] (Dhuuso Mareeb) 
 *07. [[Gedo]] (Garbahaarreey) 
@@ -68,31 +67,31 @@
 *11. [[Mudug]] ([[Galkacayo]]) 
 *12. [[Nugaal]] ([[Garoowe]]) 
 *13. [[Sanaag]] (Erigabo) 
-*14. [[Shabeellaha Dhexe]] (Jowhar) 
+*14. [[Shabeellaha Dhexe]] ([[Jowhar]]) 
 *15. [[Shabeellaha Hoose]] ([[Marka]]) 
 *16. [[Sool]] (Laascaanood) 
 *17. [[Togdheer]] (Burco) 
 *18. [[Woqooyi Galbeed]] ([[Hargeysa]])
 
-[[Soomaaliya]] waxaa xornimadeeda la soo noqotay [[1960]], kadib markii ay halgan hal qarni qaatay ay dadka Soomaaliyeed la galeen dawladihii gumaysanayey oo kala ahaa Talyaaniga iyo Ingiriiska, kuwaas oo u kala qaybiyey geyiga Soomaaliya shan qaybood. Waxay dadka Soomaaliyeed u ahayd guul aad u wayn markii ay xoroobeen labadii qaybood ee Ingiriiska iyo Talyaanigu ay kala gumaysan jireen, iyadoo ay weli ku soo jireeney gacanta gumaysiga qaybihii lakala siiyey [[Faransiiska]], [[Itoobiya]] iyo [[Kenya]].
+[[Soomaaliya]] waxaa xornimadeeda la soo noqotay [[1960]], kadib markii ay halgan hal qarni qaatay ay dadka Soomaaliyeed la galeen dawladihii gumaysanayey oo kala ahaa [[Talyaanni|Talyaaniga]] iyo [[Ingiriis|Ingiriiska]], kuwaas oo u kala qaybiyey geyiga Soomaaliya shan qaybood. Waxay dadka Soomaaliyeed u ahayd guul aad u wayn markii ay xoroobeen labadii qaybood ee Ingiriiska iyo Talyaanigu ay kala gumaysan jireen, iyadoo ay weli ku sii jireen gacanta gumaysiga qaybihii lakala siiyey [[Faransiiska]], [[Itoobiya]] iyo [[Kenya]].
 Marka laga soo gudbo kacaa kufkii dawladihii curdinka ahaa ee gumaysiga ka danbeeyey, waxaa dalka Soomaray dawlad milateri ah oo dhinacna gan adag ku maamulaysay dalka dhinaca kalena ay tartan kula jireen siyaasado badan oo kala ujeedo ah, taas oo dadka Soomaaliyeed ugu danb
 ayntii geyey siisay inay gaadhaan xaalad laga naxo oo loo malayn karo in dalkuba dib uga soo kaban waayo.
 Kooxaha maangaabka ah iyo kuwa loo adeegsaday dhagarta dalkooda ayaa ilaa maanta la soo indhacad in burburkii dalku uu ahaa guulo la gaadhay... Taas oo aan ka dheehan karno halhaysyada meelaha qaarkood laga adeegsado sida mujaahid iwm. Waxaa warbaahinta qaarkeed ayba halhaysyada furitaanka ka dhigteen heeso iyo erayo lagu dhafoor taabanayo Ummadaa hagaastay...
 
-[[Image:So-map.png|right|thumbnail|400px|Soomaaliya]]
+[[Image:So-map.png|right|thumbnail|200px|Soomaaliya]]
 
-==Batroolka Soomaaliya ==
+== Shidaalka ==
 
 [[CEELKA CONOCO]]: Dalka Soomaaliya marka la eego juqraafi ahaan, waxaa loo malaynayaa in uu ku kaydsan yahay shidaal farabadan. Shirkadaha muddad dheer ku hamiyayey in ay shidaal ka soo saaraan [[Soomaaliya]] waxaa ka mid ah shirkadda Conoco, taas oo xarun ama kaam ballaaran ku lahayd meel [http://www.somalitalk.com/oil/ceelka_conoco.html (Kaam)] 35 km dhanka Bari ka xigta magaalada Garoowe ee Gobolka Nugaal... Akhri [[CEELKA CONOCO]]
 
-==Maxaa ka taqaan Soomaliaya ==
+== Xogta Soomaaliya ==
 
 Dalka Soomaaliya waxa uu ku yaalaa geeska Africa wuxuuna ku fadhiyaa dhul baaxadiisu dhantahay 635.541km2, waxana uu xuduud la wadaagaa Bari waxaa ka xiga Badweynta hindiya, waqooyina waxaa ka xiga Jabuuti, Galbeedna dalka Itoobiya, halka koonfur galbeedna uu ka xigo dalka Kenya.
 Dalka Soomaaliya waxa uu yahay dalka labaad ee ugu xeebta dheer qaaradda Africa wuxayna leedahay xeeb dhirirkeedu tahay 3333km.
 Tirada dadka Soomaaliyeed waxaa lagu qiyaasaa 8,000,000 oo qof.
 60% Soomaalidu waa dad reer baadiya ah , 20% waa dad reer magaal ah, 15% waa dad beeralay ah iyo 5% oo ah dad Kaluumayato ah.
 
-khubarada ka faaloota taariikhda dalka Soomaaliya waxa ay sheegeen in erega Soomaaliya uu ka taaganyahay labo eray oo la'isku geeyay, kuwaasi oo kala ah (Soo-Maal), iyadoo eraga Soo macnihiisa loola jeedo Soco, halka ereyga Maal uu macnihiisu ka soo jeedo Lis.
+Khubarada ka faaloota taariikhda dalka Soomaaliya waxa ay sheegeen in erega Soomaaliya uu ka taaganyahay labo eray oo la'isku geeyay, kuwaasi oo kala ah (Soo-Maal), iyadoo eraga Soo macnihiisa loola jeedo Soco, halka ereyga Maal uu macnihiisu ka soo jeedo Lis.
 
 Marka labadaasi eray la'isku daro waxaa uu noqonayaa (Maal Saca).
 
@@ -101,30 +100,35 @@ Khubarada qaarkood waxa ay sheegaan in magaca Soomaali uu asal ahaan ka soo jeed
 Sooyaalka taariikhda qadiimiga ah waxaa iyadana laga helayaa macno kale iyadoo khubaraduna ku doodayaan in ereygaasi uu ka yimid Samaala oo micnihiisu yahay ninkii waranka Dheeraa.
 
 Samaala ayaa la sheegaa in uu ahaa ab iyo waziirkii ay ka soo farcanmeen dadka Soomaaliyeed (Aw-Samaale).
-Taariikh ahaan dalkayagu waxa uu lahaan jiray xadaarad facween waxaana dalkeena loo aqoon jiray magacyo badan sida Dhulkii udgoonaa , Dhulkii eebe iyo Geeska Africa.
+Taariikh ahaan dalku waxa uu lahaan jiray xadaarad facwayn waxaana loo aqoon jiray magacyo badan sida Dhulkii udgoonaa , Dhulkii eebe iyo Geeska Africa.
 
-Caasimadda dalkeena waa Muqdisho, tan labaadna waa Hargeysa, tan sadaxaadna waa Kismaayo, tan afaraadna waa Burco, halka tan shanaadna waa Baydhabo, goboladii ugu horeeyay ee xornimadiisa qaata dalkeena waxa uu ahaa gobolka Waqooyi waxaana xornimadooda ay qaateen 26kii bishii June sanadii 1960kii halka gobolada kale ee koonfurtana ay xornimadooda qaateen 1-dii bishii Luulyo sanadii 1960kii.
+Caasimadda dalka Soomaaliya waa [[Muqdisho]], sidoo kale magaalooyinka Soomaaliya ugu waawayn uguna dad badan waxaa ka mid ah [[Hargeysa]], [[Kismaayo]], [[Boosaaso]], [[Berbera]], [[Burco]], [[Gaalkacyo]], [[Beledweyn]], [[Marka]], [[Baydhabo]], [[Jowhar]], [[Garoowe]] iyo [[Laascaanood]], goboladii ugu horeeyay ee xornimadiisa qaata dalka Soomaaliya waxay ahaayeen gobollada Waqooyi waxaana xornimadooda ay qaateen [[Juun]] [[26]] [[1960]], halka gobollada kale ee koonfurtana ay xornimadooda qaateen [[Luulyo]] [[1]] sanadii [[1960]].
 
-Shirkii gumeestayaasha Africa ee lagu qeybsaday Africa ee ka dhacay Baar-liin 1884-tii ayaa dalka Soomaaliya loogu qeybiyey 5qeybood waxana shantaasi qeybood ay kala ahaayee:
-Gobolada Waqooyi oo la siiyay gumeestihii Ingiriiska.
-Gobolada koonfureed oo la siiyay gumeystihii Talyaaniga.
-Xeebta Soomaaliyeed ee Jabuuti ee loo dhiibay gumeystihii Faransiiska.
-N.F.D oo iyadana la siiyay dalka Kiiniya.
-Iyo gobolada Soomaali galbeed oo gacanta loo geliyay Dawladda Itoobiya.
-shantaan gobol waxaa la isku yiraahdaa shanta Soomaaliya taariikhdu markii ay eheyd 27kii bishii June sanadii 1977 ayay Jabuutina xornimadeeda qaadatay, waxaasa wali gacanta gumeestaha ku jira Soomaali galbeed iyo N.F.D.
-Hadaba markii ay xurnimada qaateen gobolada Koonfureed sanadii 1960kii waxay ahaayeen lix gobol oo kala ahaa gobolka Banaadir, gobolka Hiiraan, Gobolka Mudug iyo Gobolka Bari sidoo kale waxaa iyana ku soo idarsamay goboladii waqooyi ee iyaguna isla sanadkaas xornimada qaatay waxayna ku soo darsadeen koonfurta lbadii gobol ee xiligaasi gobolada waqooyi la'isku oran jiray, ee gobolka Waqooyi, Galbeed io gobolka Togdheer waxana ay isku noqdeen goboladii jamhuuriyadda sideeda gobol, markii uu kacaankii milatariga ahaa dalka Qabsaday ee la qaaday ololihii horumarinta reer miyiga ee sanadii 1973dii ilaa 1974tii xiligaasoo ay timid baahi ween oo ahayd in la magacaabo gobolo kale markaas waxaa sideedii gobol lagu kordhiyay todobo kale waxayna tirada gobolada dalka noqdeen shan iyo toban gobol Bilowgii sanadii 1980kii waxaa lagu kordhiyay gobolka Jubada dhexe, dabayaaqadii sideetameeyadii ayaa iyana la magacaabay gobolada Sool iyo Awdal xiligaasoo tirada gobolada dalku noqdeen sideed iyo toban gobol.
+[[Image:1-luulyo-gabdho-soomaaliyeed.jpg|left|thumbnail|465px|Gabdho Soomaaliyeed oo xusaya 1-da Bisha Luulyo]]
+
+Shirkii [[Gumaystayaashii Afrika]] ee lagu qeybsaday [[Afrika]] ee ka dhacay Baar-liin 1884-tii ayaa dalka Soomaaliya loogu qeybiyey 5 qeybood waxayna kala ahaayeen:
+Gobollada [[Waqooyi Galbeed]] oo la siiyay gumeestihii [[Ingiriis|Ingiriiska]].
+Gobollada [[Waqooyi Bariy]] iyo [[Koonfur|Koonfur]] oo la siiyay gumeystihii [[Talyaanni|Talyaaniga]].
+
+Jabuuti oo la siiyey [[Faransiis|Faransiiska]].
+
+N.F.D oo Ingiriisku ku darsaday [[Kenya]] oo uu berigaas gumaysanayey.
+Iyo gobolada Soomaali galbeed oo Ingiriiska iyo Talyaanigu siiyeen Dawladda [[Itoobiya]].
+shantaan gobol waxaa la isku yiraahdaa [[Shanta Soomaaliya]] taariikhdu markii ay ahayd [[27]] [[Juun]] [[1977]] ayay [[Jabuuti]] xornimadeeda qaadatay, Waxaan Weli Xor Ahayn [[Soomaali Galbeed]] oo [[Itoobiya]] haysato, iyo [[MFD]] oo [[Kenya]] haysato.
+
+Hadaba markii ay xurnimada qaateen gobolada Koonfureed sanadii 1960kii waxay ahaayeen lix gobol oo kala ahaa gobolka [[Banaadir]], gobolka [[Hiiraan]], Gobolka [[Mudug]] iyo Gobolka [[Bari]] sidoo kale waxaa iyana ku soo darsamay goboladii waqooyi ee iyaguna isla sanadkaas xornimada qaatay waxayna ku soo darsadeen koonfurta labadii gobol ee xiligaasi gobolada waqooyi la'isku oran jiray, ee gobolka [[Waqooyi Galbeed]] iyo gobolka [[Togdheer]] waxaana ay isku noqdeen goboladii [[Jamhuuriyad|Jamhuuriyadda]] siddeeda gobol, markii uu kacaankii milatariga ahaa dalka Qabsaday ee la qaaday ololihii horumarinta reer [[Miyi|miyiga]] ee sanadii [[1973]] ilaa [[1974]] xiligaasoo ay timid baahi ween oo ahayd in la magacaabo gobolo kale markaas waxaa sideedii gobol lagu kordhiyay todobo kale waxayna tirada gobolada dalka noqdeen shan iyo toban gobol Bilowgii sanadii 1980kii waxaa lagu kordhiyay gobolka Jubada dhexe, dabayaaqadii sideetameeyadii ayaa iyana la magacaabay gobolada Sool iyo Awdal xiligaasoo tirada gobolada dalku noqdeen sideed iyo toban gobol.
 Shaxda Gobolada iyo Degmooyinka Dalkeena.
 {{Gobolada_Soomaaliya}}
 
 
-Dhererka u dhexeya Gobolada dalka.
+Dhererka u dhexeya Gobolada dalka Soomaaliya.
 Shaxda soo socota ayaa waxa ay muujinaysaa fogaanta u dhexeysa Gobolada dalkeena iyo magaala madaxda.
 
 == Muqdisho inta eey ujirto magaalooyinka kale==
  
 {{Masaafo}} 
 
-== Fogaanta ay isu jiraan magaalooyinka ==
+== Fogaanta ay isu jiraan magaalooyinka Soomaaliya ==
 
 Hadaba shaxdan kalena waxa ay qayexeysaa fogaanta ay isu jiraan qaybo ka mid ah magaalooyinka dalkeena Soomaaliiya.
 					   
@@ -132,7 +136,7 @@ Hadaba shaxdan kalena waxa ay qayexeysaa fogaanta ay isu jiraan qaybo ka mid ah 
 			 	 
 Kheyraadka Dabiiciga ee Soomaaliya.
 
-Dalkeena waxa uu leeyahay kheyraad fara badan oo aanan halkaan ku soo koobi karin waxaasa ka mid ah kheyraadka dalkeena laga helo:
+Soomaaliya waxay leedahay kheyraad fara badan oo ay ka mid yihiin:
 
 Dalagyada Soomaalidu Beerato ayaa waxa ay yihiin dalagyo aad u wanaagsan isla markaana aan ka bixin wadamada africa qaarkood waxana shaxda hoos ku qoran ay muujinaysaa magaca dalaga iyo inta uu ku bislaado:
  
@@ -151,12 +155,12 @@ Canbaha	  6      sano
 		 
 Wax soo saarka Badda dalkeena Soomaaliya waxa uu leeyahay labo badood oo kala ah Badda Cas iyo Badweynta Hindiya waana dal ay dhamaantiis ku dharersantahay Bad laga soo biloobo Cirifka Koonfureed ee Raaskambooni ilaa Cirifka Waqooyi ee Raascaseyr, magaalooyinka dhaca xeebaha waxaa ugu caansan saylac, berbera, caluula, boosaaso, Qandala, iskushuban bandarbayla, hobyo ,muqdisho, marka, baraawe, kismaayo
 
-== Wabiyada dalkeena ==
-Dalkan Soomaaliya waxaa mara labo wabi oo kala ah Jubba iyo Shabele waxayna ka yimaadaan dalka Itoobiya waxaana ugu dheer Webiga Shabele oo dhererkiisu uu gaarayo 1500km, waxaase ugu weyn uguna biyo badan webiga Jubba oo dhererkiisu uu gaarayo 800km.
+== Wabiyada ==
+Dalka Soomaaliya waxaa mara labo wabi oo kala ah Jubba iyo Shabele waxayna ka yimaadaan dalka Itoobiya waxaana ugu dheer Webiga Shabele oo dhererkiisu uu gaarayo 1500km, waxaase ugu weyn uguna biyo badan webiga Jubba oo dhererkiisu uu gaarayo 800km.
 magaalooyinka ay dalka ka maraan hadaan soo qaadano webiga Shabele wuxuu dalka ka soo galaa xadka uu gobolka Hiiraan la leeyahay dalka Itoobiya meel u dhow magaalada Feer-feer wuxuuna soo maraa magaalyooyinka Beledweyne, Buuloburte, Jowhar, Balcad, Agooye, Jannaale wuxuuna ku dhamaadaa meesha la yiraahdo Dhaytubaako oo u dhexeysa Jilib iyo Shalaanbood, Wabiga Jubba isagu waxa uu dalka ka so galaa Xuduuda uu gobolka Gedo la leeyahay dalka Itoobiya wuxuuna soo maraa magaalooyinka Doolow Luuq Baardheere Bu'aale Jilib, Mareerey, Kamsuuma Jamaame Kunbarera,  Abdalla kikan, Casbooley Buulbaley  wuxuuna ku dhamaadaa oo uu badda kaga darsoomaa meesha la yiraahdo Goobweyn oo Kismaayo u jirta 25km.
 halka liibaanta qoryooley ay tahey wax soo saarka soomaalida meesh wax soo saar badan..............
 
-== Maalmaha dalkeena lagu qadariyo lana xuso sanada walba waxaa ka mid ah:==
+== Maalmaha Soomaaliya lagu qadariyo lana xuso sanada walba waxaa ka mid ah:==
 {{commonscat|Somalia|Soomaaliya}}
 
 *1. 26kii Juun [[1960]]kii xornimadii gobolada Waqooyi.
@@ -186,9 +190,10 @@ halka liibaanta qoryooley ay tahey wax soo saarka soomaalida meesh wax soo saar 
 [[Category:Dowladaha Afrika]]
 [[Category:Wadamada Afrika]]
 
-[[banaadir telecom]]
+[[Banaadir Telecom]]
+[[Puntland]]
+[[Somaliland]]
 
-ähläm sähläm
 
 [[af:Somalië]]
 [[am:ሶማሊያ]]
