*Empty MediaWiki Message*

--- a/Soomaaliland.mw
+++ b/Soomaaliland.mw
@@ -1,27 +1,25 @@
 [[Image:Somalia-Somaliland.png|thumb|Dalka Somaliland]]
 [[Image:Flag_of_Somaliland.png|thumb|Calanka Somaliland]]
 
-'''Somaliland''' waa dowlad goboled kuyaal geeska bari ee [[Afrika]], waxey xaddadka la wadaagtaa [[Somalia]], [[Djabuti]] iyo [[Itoobiya]]. Somaliland waxey ahey biritish colonie waxeyna xornimadda qaadatey 1960. Somaliland waxey markiiba la midowdey qeybta Soomaliya ee talyaanigu guumeysan jirey. 
+'''Somaliland''' ([[Soomaali|Af-Soomaali]] Soomaalilaandh) waa dowlad aan weli adduunku aqoonsan oo dhacda geeska bari ee [[Afrika]], waxey xaddadka la wadaagtaa [[Somalia|Soomaaliya]], [[Djibouti|Jabuuti]] iyo [[Ethiopia|Itoobiya]]. Somaliland waxey aheyd gobolladii [[Ingiriis|Ingiriisku]] gumaysan jirey, waxeyna xornimadda qaadatey [[Juun]] [[26]] [[1960]] afar maalmood ka dibna waxay la midowday [[Soomaliya]] oo [[Talyaanni|Talyaanigu]] guumeysan jiray. 
 
-Sanadku markuu ahaa 1991 ayey somaliland la soo noqotey madax banaadidoodii. Somaliland waxey iminka ku dhisan tahey habka loo yaqaan dimuqraadiyadda. Waxey leedahey xisbiyo siyaasadee oo madaxbanaan. [[Magaalo]] madaxda Somaliland waa [[Hargeysa]].
+Sanadkii [[1991]] ayey Somaliland ku dhawaaqday inay ka go'day dalka [[Soomaaliya]], waxayna la baxday magaca [[Somaliland]] magaalo-madaxna waxaa u noqotay [[Magaalo|magaalada]] [[Hargaysa]]. [[Cabdiraxman Axmed Cali (Tuur)]] oo ahaan jirey hogaamiyihii Jabhaddii Mucaaradka ahayd ee [[SNM]], ayaa loo doortay inuu noqdo madaxweynaha Somaliland, waxaa ku xigey [[Maxamed Xaaji Ibraahim Cigaal]]. Waqtigaan la joogo Somaliland waxaa madaxweyne u ah Somaliland waa [[Daahir Rayaale Kaahin]].
 
-Madaxweyneyaashii Somaliland :
+Somaliland waxaa ka jira [[Xisbi|Xisbiyo]] Siyaasadeed oo madax bannaan, sida [[Kulmiye]], [[UDUB]], [[UCID]] iyo [[Qaran]].
+
+
+
+== Madaxweyneyaashii Somaliland: ==
 *1. [[Cabdiraxman Axmed Cali Tuur]] : [[1991]] - [[1993]]
-*2. Maxamed Xaaji Ibraahim Cigaal : [[1993]] - [[2002]]
+*2. [[Maxamed Xaaji Ibraahim Cigaal]] : [[1993]] - [[2002]]
 *3. [[Daahir Rayaale Kaahin]] : [[2002]] - 
 
-----
+== Maalmaha Somaliland laga Xuso ==
+*1- [[26]] [[Juun]] oo ah maalinta ay ka qadatay xornimada gumaysigii [[Ingiriis|Ingiriiska]].
+*2- [[18]] [[Maajo]] oo ah maalinta ay madaxbanaanida kala noqotay [[Soomaaliya]].
+*3- Labada Ciidood ee Islaamka
+*4- Maalmaha Caalamiga ah sida maalinta shaqaalaha, [[AIDS|Aydhiska]], iwm.
 
-==  waxaan odhan lahayn somaliland maaha dowlad goboleed ee waa dal ka go'ay somalia mana aha sida maamul goboleedka puntland markaa waxaan odhan lahaa halka bilowga ay ku qorantahay somaliland waa maamul goboleed in lagu bedelo somaliland waa dowlad ka go'day somalia laakiin aan wali caalamka wad ictitiraafa kal helin 
-sidaa iyo nabad galyo
-contact me if you want say116@hotmail.com
-hargeisa somaliland
-
-== maalmaha laga xuso somaliland ==
-1-26 juun oo ah maalinta ay ka qadatay xornimada gumaysigii ingiriiska.
-2-18 may oo ah maalinta ay madaxbanaanida kala noqotay dawlada somalia.
-3-iyo maalmaha kale ee islaamka sida ciidaaha iyo dhalashada nabiga.
-4-iyo sidoo kale maalmaha caalamiga ah sida maalinta shaqaalaha aduunka.
 [[Category:Soomaaliya]]
 [[Category:Afrika]]
 
