--- a/Janaayo.mw
+++ b/Janaayo.mw
@@ -1,5 +1,5 @@
 {{Bilaha}}
-* Sanadka miilaadiga bishiisa koowaad. Bisha janaayo waxay ka koobantahay 31 maalmood, waxaana loo soo gaabiyaa jan.
+* Sanadka [[Miilaadi|Miilaadiga]] bishiisa koowaad. Bisha janaayo waxay ka koobantahay 31 maalmood, waxaana loo soo gaabiyaa jan.
 
 [[af:Januarie]]
 [[als:Januar]]
