*Empty MediaWiki Message*

--- a/Arabsiyo.mw
+++ b/Arabsiyo.mw
@@ -1,4 +1,6 @@
-'''Arabsiyo''' waa magaalo ku taalo gobalka waqooyi galbeed, kana xigta dhinaca galbeed magaalada Hargeisa. Waxay ka mid tahay magaalooyinka ugu beeraha badan dalka jamhuuriyadda Somaliland. arabsiyo waxay leedahay saddex doox oo waawyen lana kala yidhaa Huluq, Arabsiyo, iyo agamsaha 
+'''Arabsiyo''' waa magaalo ku taalo gobalka waqooyi galbeed, una dhexaysa magaalada Hargeisa iyo Gabiley. Waxay ka mid tahay magaalooyinka ugu beeraha badan Mamulka Somaliland. '''[[Arabsiyo]]''' waxay leedahay saddex doox oo waawyen lana kala yidhaa Huluq, Arabsiyo, iyo Agamsaha. Arabsiyo waa Magaalo aan ammanteeda ereyo lagu soo koobi karin waxanse ku soo kufinayaa waa janno ifku loogu deeqay. 
+
+Abdirahman F Geddi (Geddima@Yahoo.com)
  
 [[Category:Magaalooyinka Soomaaliya]]
 
