--- a/Template:Bilaha.mw
+++ b/Template:Bilaha.mw
@@ -6,7 +6,7 @@
 |-
 | &nbsp; || [[Abriil]] || &nbsp; || [[Maajo]] || &nbsp; || [[Juun]] || &nbsp;
 |- 
-| &nbsp; || [[Luuliyo]] || &nbsp; || [[Agoosto]] || &nbsp; || [[Sebdeembar]] || &nbsp;
+| &nbsp; || [[Luuliyo]] || &nbsp; || [[Agoosto]] || &nbsp; || [[Sebteembar]] || &nbsp;
 |- 
 | &nbsp; || [[Oktoobar]] || &nbsp; || [[Nofeembar]] || &nbsp; || [[Diseembar]] || &nbsp;
 |}
