*Empty MediaWiki Message*

--- a/Miilaadi.mw
+++ b/Miilaadi.mw
@@ -10,7 +10,7 @@
 *[[Juun]] 	 
 *[[Luuliyo]] 	  	
 *[[Agoosto]] 	  	
-*[[Sebdeembar]] 	 
+*[[Sebteembar]] 	 
 *[[Oktoobar]] 	  	
 *[[Nofeembar]] 	  	
 *[[Diseembar]]
