[[fr:Time (magazine)]]

--- a/Majladda_Time.mw
+++ b/Majladda_Time.mw
@@ -6,3 +6,27 @@ Time, caddadkeedii ugu horreeyey wuxuu soo baxay sanadkii [[Maarso]] [[3]], [[19
 Waxaa la sheegaa in magaca ''TIME'' uu yahay ereyo laga soo gaabiyey "''The International Magazine of Events.''" oo la cno ah "''Shantiriska Caalamiga ah ee Dhacdooyinka''"
 
 Waqtigaan la joogo, tifaaftiraha ''Time'' waa [[Richard Stengel]]; [[Priscilla Painton]], [[Adi Ignatius]] iyo [[Michael Elliott]]na waa u qaybsanaaysha maamulka shantiriska.
+
+[[fr:Time (magazine)]]
+[[ko:타임 (잡지)]]
+[[id:TIME]]
+[[it:TIME]]
+[[he:טיים מגזין]]
+[[ka:ტაიმი (ჟურნალი)]]
+[[hu:Time magazin]]
+[[nl:Time (tijdschrift)]]
+[[ja:タイム (雑誌)]]
+[[no:Time Magazine]]
+[[pl:Time (tygodnik)]]
+[[pt:Time (revista)]]
+[[ro:Time (revistă)]]
+[[ru:Time (журнал)]]
+[[simple:Time (magazine)]]
+[[sr:Тајм (магазин)]]
+[[fi:Time]]
+[[sv:TIME Magazine]]
+[[th:ไทม์]]
+[[tr:TIME (dergi)]]
+[[uk:Тайм (журнал)]]
+[[zh-yue:時代雜誌]]
+[[zh:時代 (雜誌)]]
