*Empty MediaWiki Message*

--- a/Bilaha.mw
+++ b/Bilaha.mw
@@ -17,6 +17,8 @@ Sanadka miilaadiyada wuxuu ka koobanyahay 12 biloood. Macagyada bilahaas dhnaka 
 * [[Nofeembar]] 	  	
 * [[Diseembar]]
 
+*[[Miilaadi]]
+
 [[als:Monat]]
 [[ang:Mōnaþ]]
 [[ar:شهر]]
