*Empty MediaWiki Message*

--- a/Ceerigaabo.mw
+++ b/Ceerigaabo.mw
@@ -1,4 +1,4 @@
-xarunta  goboklka  sanaag  ee  ceergaabo    waa  dalka   [[Somaliland]] by xuseen  ceergaabo.
+xarunta  goboklka  sanaag  ee  ceergaabo    waa  dalka   [[Somalia]] by xuseen  ceergaabo.
 
 [[Category:Soomaaliya]]
 
