*Empty MediaWiki Message*

--- a/Ceerigaabo.mw
+++ b/Ceerigaabo.mw
@@ -1,3 +1,5 @@
+[[Image:Ceerigaabo.jpg|thumb|Ceerigaabo]]
+
 xarunta  goboklka  sanaag  ee  ceergaabo    waa  dalka   [[Somalia]] by xuseen  ceergaabo.
 
 [[Category:Soomaaliya]]
