--- a/Dadka_Benaadiriga.mw
+++ b/Dadka_Benaadiriga.mw
@@ -7,11 +7,13 @@ Reer Banaadir waxay leeyihiin xadaarad wayn. Qaybtaana waxaan ku soo uruurinaaya
 * Luuq Luuq Marow, Laazim Laami Lees Kuugu Ridaa
 * Malaay banaan ma yimaad, maqaalin lee keentaa
 * Mukulaal mininkeeda joogto, mici libaax ey leedahay
-* canjeero sii ukala koreeysaa loo kale qadaa
+* canjeero sii ukala koreeysaa loo kale qadaa[p[p
 * Ninkii Dagaalkaaga Rabo, Dooradaada Aas Ka Soo arartaa
 * murug mahino meel laga rabin muradkaaga galee
 * yawaaye yaas ahaay yeeli meyne  
 *yamaarug aa yaaq ka weyn aan la yabanahay ...
+kahari waysee waa ku haaysataa 
+daraja diidoo duli ayaa kuu danbeeyo
 
 [[de:Benadiri]]
 [[en:Benadiri people]]
