--- a/Qaaradaha.mw
+++ b/Qaaradaha.mw
@@ -5,8 +5,9 @@
 * [[Ameerikada koonfureed]]
 * [[Ameerikada waqooyi]]
 * [[Antiarktis]]
-* [[Ooshiyaaniya]]
+* Ustareliya
 * [[Yurub]]
+Sido kale wadamada qarbaa manhajkoda waxabarashada ku jirtaa in ay '''Raashiya''' qarad tahay
 
 [[Category:Juquraafi]]
 
