/* Qaaradaha uu aduunka ka koobanyahay */

--- a/Qaaradaha.mw
+++ b/Qaaradaha.mw
@@ -9,6 +9,8 @@
 * [[Yurub]]
 Sido kale wadamada qarbaa manhajkoda waxabarashada ku jirtaa in ay '''Raashiya''' qarad tahay
 
+Wadamada South America, konfurta Ameerika waxay yidhahdan Ameerika waa hala oo waa isku Ameerika, laa kiinse waxan ku bartay South and North America.
+
 [[Category:Juquraafi]]
 
 [[af:Kontinent]]
