/* Degmooyinka gobolka Awdal ee soomaaliya (haatan somaliland) */

--- a/Awdal.mw
+++ b/Awdal.mw
@@ -35,15 +35,15 @@ Gobolka awdal waa gobol dhaqaalihiisu aad ugu tiirsanyahay xoolaha nool, Beeraha
 
 * [[Baki]]
 * [[Boon]]
-* [[Boorame]]
-* [[Xariirad]]
-* [[Dila]]
-* [[Saylac]]
-* [[Goroyacowl]]
-* [[Geerisa]]
-* [[Qulujeed]]
-* [[Libaaxley]]
-* [[Lughaya]]
+* [[Boorame dhilo badan]]
+* [[Xariirad siil qadhmuun]]
+* [[Dila, waxa dega beelaha Gabooyaha
+* [[Saylac asalkeeda waxa iska leh Isaaq, Habar Yoonis, Muse Care]]
+* [[Goroyacowl, mas laku cun, meleterigii somaliyaa baa masaska ku cuni jirey]]
+* [[Geerisa tuulo]]
+* [[Qulujeed tuul]]
+* [[Libaaxley tuulo]]
+* [[Lughaya waxa degaa Habar Awal
 
 
 Gobolkan waxaa magaala madaxdiisu tahay [[Boorame]] dhaqaalihiisuna waxa uu ku tiirsanyahay ganacsiga iyo xoolaha nool. Magaalo madaxdiisii hore waxa ay ahaan jirtay [[Baki]].
