--- a/Sool.mw
+++ b/Sool.mw
@@ -24,6 +24,9 @@ Gobolka [[Sool]] wuxuu ku yaalaa woqooyiga-bari ee [[Soomaaliya]] waxaana caasim
 * [[Laascaanood]]
 * [[Caynaba]] waxay dhanka waqooyi kagtaa laascaanood
 * [[Taleex]] waa magaladii ugu horaysay ee diyad lagu garaaco afrika (yagoori waxay kutaala dhinaca waqooyi
+* Xudun
+* Yagoori (Degmo Cusub Jamhuuriyada Somaliland)
+* Bohol (degmo Cusub Jamhuuriyada Somaliland)
 
 {{Gobolada Soomaaliya}}
 
