*Empty MediaWiki Message*

--- a/Cabdiraxmaan_Tuur.mw
+++ b/Cabdiraxmaan_Tuur.mw
@@ -1,3 +1,3 @@
-Madaxwaynahii uu hoeyey ee Somaliland kunaa dhawaaqay goni isu taaga Jamhuuriyada Somaliland, Wuxu aha Siyaasi wayn, wuxu kaa soo shaqeeye dawladi hore ee Somaliya, Wuxu soo qabtay xilal badan, Wuxu uu soo halgamey dib uu socelitii Somaliland, wuxu walal la ahaa aabahii waxa barashada Somaliya (Maxamuud Axmed Cali oo lo yaqaaney Father of Education Of Somalia)
+Madaxwaynahii uu horeyey ee Somaliland kunaa dhawaaqay goni isu taaga Jamhuuriyada Somaliland, Wuxu aha Siyaasi wayn, wuxu kaa soo shaqeeye dawladi hore ee Somaliya, Wuxu soo qabtay xilal badan, Wuxu uu soo halgamey dib uu socelitii Somaliland, wuxu walal la ahaa aabahii waxa barashada Somaliya (Maxamuud Axmed Cali oo lo yaqaaney Father of Education Of Somalia)
 
 Dib kala soco Taariikhda Marxuumka, Madaxwaynahi sharaftalahaa C/raxmaan Tuur
