--- a/Ugaas_Cilmi_Ugaas_Warfaa.mw
+++ b/Ugaas_Cilmi_Ugaas_Warfaa.mw
@@ -5,3 +5,4 @@ Ilaha xaqiiqdan oo ku kala qeybsan [[Geography]] ahaan Qoraxey intey loo yiqiin 
 
 Dib aan ugu laabano sababta aanu u magacownay Geography'ga Qoraxey. Sababtu waxaa weeye in ilo lagu kal sooni qabo iyana tilmaaneen in taliska Ugaas magacan uu ahaa Ciid Iyo Doollo.
 Nasiib daro owgeed doollo maanta hooyga qoraxey ma,aha, sida uu gumeysiga dhulka Ogadenia ukala qeybiyey owgeed. Laakin nasiib wanaag Ciid yaa Maanta ka mid ah Dhulka loo yaqaan Qoraxey.
+Cilmi Family ahaan 12'kiisii wiil maanta waxaa ka joogo, Reer Xirsi Cilmi, Reer Boon Cilmi, Reer Faarax Cilmi, Bihinanuur oo ah kooshin iyo liibaan, Warfaa-Ugaas, Khalaf, Wacays.
