--- a/Ugaas_Cilmi_Ugaas_Warfaa.mw
+++ b/Ugaas_Cilmi_Ugaas_Warfaa.mw
@@ -1,8 +1,13 @@
-Ugaas Cilmi Ugaas Warfaa oo bah ahaan la dhashay Ugaas Magan ugaas warfaa, Wuxuu wakhti ahaan kasoo jeedaa dhexdhexaadkii 1600, Sida taariikh aan qorneyn oo aababa aabo sii gaadhsiyay lagu hayaa, In awoowgii oo ah Ugaas Xirsi Ugaas Khalaf inuu Yeeshay 12 wiil, Warfaana Yeeshay 12 Wiil, Cilmi Iyo Magana uu midkoodba yeeshay 12.
+Ugaas Cilmi Ugaas Warfaa oo bah ahaan la dhashay Ugaas Magan ugaas warfaa, Wuxuu wakhti ahaan kasoo jeedaa dhexdhexaadkii 1700, Sida taariikh aan qorneyn oo aababa aabo sii gaadhsiyay lagu hayaa, In awoowgii oo ah Ugaas Xirsi Ugaas Khalaf inuu Yeeshay 12 wiil, Warfaana Yeeshay 12 Wiil, Cilmi Iyo Magana uu midkoodba yeeshay 12.
 Hadaan dib ugu soo noqono Taariikhda Ugaas cilmi wuxuu Ka taliyay dhulkan loo yaqaano Qoraxey.
-Ilaha xaqiiqdan oo ku kala qeybsan [[Geography]] ahaan Qoraxey intey loo yiqiin waagaas iyo maanta, waxaan isku daynay inaan sii ogaana, anagoo ilo kooban ka heyn in Ugaas cilmi fadhiisan u aheyd dhulkan Togga Faafaneed  marro ee ah  Birqod, Sheygoosh, Xudureyle, Iyo Qabridahare oo xiligaas daaqdin iyo ceelbiyoodba ahaa keyn reer ugaas cilmi,  Dadka taariikdha ugu jira Qoyska ugaas cilmi waxaa ka mid ah dad gabyo iyo Dagaal xeeleed ku caan baxay. Sida Dhoonyacab, Faarax Caytame, Kormaajan iyo qaar kaleba.
+Ilaha xaqiiqdan oo ku kala qeybsan [[Geography]] ahaan Qoraxey intey loo yiqiin waagaas iyo maanta, waxaan isku daynay inaan sii ogaana, anagoo ilo kooban ka heyn in Ugaas cilmi fadhiisan u aheyd dhulkan Togga Faafaneed  marro ee ah  Birqod, Sheygoosh, Xudureyle, Iyo Qabridahare oo xiligaas daaqdin iyo ceelbiyoodba ahaa keyn reer ugaas cilmi,  Dadka taariikdha ugu jira Qoyska ugaas cilmi waxaa ka mid ah dad gabyo iyo Dagaal xeeleed ku caan baxay. Sida Xuseen Hudle, Dhoonyacab Faarax Caytame, Aw Yusuf Barre, Cilmi raage,  Kormajaan iyo qaar kaleba.
 
-
+Taarikhda wixii udhaxeeyay 1700 ilaa iyo bilowgii 1800 yaa mugdi gashay, guud ahaan soomaliba.
+Astaamaha nasiibka uyeeshay ilaa maanta iney muuqdaan waa erey murtiyeed uu cilmi sheegay markii Cilmi iyo Magan kala qeybsan hayeen somalida ku dhaqan Qoraxey iyo agagaarkaba
+Cilmi qabiil gaadsan la dhaho yuu doortay, laakin markii horre waxaa isu garab yaalay madaluug iyo gaadsan.
+wuxuu yidhi " Meel 60 ah oo min 6 usocota qaadan mahayo, ee meel lix ah oo 60 usocota yaan qaadan"
+waxaan kaloon ka heynaa astaan geela lagu dhigto oo Bil goobaad ah.
+Waxaa kaloo jiray Geed la odhan jiray " Gobkii dooxa weyn" oo u carisgaas ahaa geedka reer cilmi ku kala tala qaato, sida ka muuqata erayadii cilmi raage allaha unaxariistee wuxuu yidhi " Gangan iyo Gafuurkii hadhiyo, faafan gudaheeda, Galadiid Goobkii Dooxa weyn, Goray meeshiisa"
 Dib aan ugu laabano sababta aanu u magacownay Geography'ga Qoraxey. Sababtu waxaa weeye in ilo lagu kal sooni qabo iyana tilmaaneen in taliska Ugaas magacan uu ahaa Ciid Iyo Doollo.
 Nasiib daro owgeed doollo maanta hooyga qoraxey ma,aha, sida uu gumeysiga dhulka Ogadenia ukala qeybiyey owgeed. Laakin nasiib wanaag Ciid yaa Maanta ka mid ah Dhulka loo yaqaan Qoraxey.
 Cilmi Family ahaan 12'kiisii wiil maanta waxaa ka joogo, Reer Xirsi Cilmi, Reer Boon Cilmi, Reer Faarax Cilmi, Bihinanuur oo ah kooshin iyo liibaan, Warfaa-Ugaas, Khalaf, Wacays.
