Interwiki:  + [[dsb:Francojska]], [[stq:Frankriek]]

--- a/Faransiiska.mw
+++ b/Faransiiska.mw
@@ -55,6 +55,7 @@ Magaalo :
 [[da:Frankrig]]
 [[de:Frankreich]]
 [[diq:Fransa]]
+[[dsb:Francojska]]
 [[dv:ފަރަންސޭސިވިލާތް]]
 [[dz:ཕརཱནསི་]]
 [[el:Γαλλία]]
@@ -164,6 +165,7 @@ Magaalo :
 [[sq:Franca]]
 [[sr:Француска]]
 [[st:Fora]]
+[[stq:Frankriek]]
 [[sv:Frankrike]]
 [[sw:Ufaransa]]
 [[ta:பிரான்ஸ்]]
