Interwiki:  + [[dsb:Rozhelony]] × [[fa:مه (ماه)]]

--- a/May.mw
+++ b/May.mw
@@ -26,6 +26,7 @@ Sanadka miilaadiga [[bil|bishiisa]] shanaad, waxayna u dhaxaysaa bilaha [[abriil
 [[cy:Mai]]
 [[da:Maj]]
 [[de:Mai]]
+[[dsb:Rozhelony]]
 [[dv:މެއި]]
 [[ee:Damɛ]]
 [[el:Μάιος]]
@@ -34,7 +35,7 @@ Sanadka miilaadiga [[bil|bishiisa]] shanaad, waxayna u dhaxaysaa bilaha [[abriil
 [[es:Mayo]]
 [[et:Mai]]
 [[eu:Maiatz]]
-[[fa:مه]]
+[[fa:مه (ماه)]]
 [[fi:Toukokuu]]
 [[fiu-vro:Lehekuu]]
 [[fo:Mai]]
