--- a/Juun.mw
+++ b/Juun.mw
@@ -26,6 +26,7 @@ Sanadka miilaadiga [[bil|bishiisa]] lixaad, waxayna u dhaxaysaa bilaha [[maajo]]
 [[cy:Mehefin]]
 [[da:Juni]]
 [[de:Juni]]
+[[dsb:Smažki]]
 [[dv:ޖޫން]]
 [[ee:Masa]]
 [[el:Ιούνιος]]
